# subtext-bench

./: .gitignore  .gitmodules  README.md  pyproject.toml
plots/: animal_task_heatmap.html
reference/: receiver-amplification.txt
reference/reports/: ANALYSIS_SUMMARY.md  CHECKLIST_FOR_PRODUCTION.md  DEFENSIVE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FAILURE_SCENARIOS.md  FIXES_AND_CODE_EXAMPLES.md  INDEX.md  PRODUCTION_REVIEW.md  README_ANALYSIS.md  REVIEW_COMPLETE.txt  REVIEW_INDEX.md  TECHNICAL_RECOMMENDATIONS.md
reports/: model_compatibility.md
scripts/: plot_cross_monitor.py  run_baseline.sh  run_baseline_gpt52.sh  run_cross_model.sh  run_cross_sender_receiver.sh  run_diagonals.sh  run_gpt52_monitor_cross.sh  run_prefill_direct.sh
src/subtext_bench/: __init__.py  _registry.py  check_models.py  dataset.py  faceted_opus_sender.py  grid_breakdown.py  grid_breakdown_gpt52.py  grouped_bar.py  heatmap_cross.py  histogram.py  prompts.py  scatter2.py  scatter3.py  scorers.py  solvers.py  strip_plot.py  utils.py  visualize.py  visualize_interactive.py
src/subtext_bench/tasks/: __init__.py  baseline.py  direct.py  number.py  story.py  system_prompt.py
tests/: test_dataset.py  test_prompts.py  test_scorers.py  test_tasks.py  test_utils.py
